--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div id="content-flowrobot" class="robotDiv contentConsistentCircle" style="display: none; width: 100%;">
                     <h3>Flow Robot</h3>
                     <p>
-                        FlowRobot er en digital robot, som hjælper med at styre og udføre </br>
+                        FlowRobot er en digital robot, som hjælper med at styre og udføre <br/>
                         dine arbejdsprocesser.
                         <!-- <a href="#" class="readMe">［Read me］</a> -->
                     </p>
@@ -374,15 +374,15 @@
                 <div id="content-flowdesign" class="designDiv contentConsistentCircle" style="display: none; width: 100%;">
                     <h3>Flow Design</h3>
                     <p>
-                        Med FlowDesigner kan I designe og automatisere interaktive </br>
-                        processer ligesom I ønsker – uden programmering og uden behov </br>
+                        Med FlowDesigner kan I designe og automatisere interaktive <br/>
+                        processer ligesom I ønsker – uden programmering og uden behov <br/>
                         for IT-folk. <!-- <a href="#" class="readMe contentConsistentCircle">［Read me］</a> -->
                     </p>
                 </div>
                 <div id="content-flowperform" class="performDiv" style="display: none; width: 100%;">
                     <h3>Flow Perform</h3>
                     <p>
-                        FlowPerfomance giver indsigt i jeres drifts-performance i alle </br>
+                        FlowPerfomance giver indsigt i jeres drifts-performance i alle <br/>
                         digitale processer på tværs af virksomheden.
                        <!--  <a href="#" class="readMe contentConsistentCircle">［Read me］</a> -->
                     </p>
@@ -406,13 +406,8 @@
                     <a class="linkOptimizer" href="processer.html">Processer</a>
                 </h4>
                 <div class="line">
-                    <p>
-                        SKAB VÆRDI GENNEM PROCESSER FLOWINT styrker PROCESSER Kan du sætte hak ved et eller flere af disse punkter, når du stiller dig selv følgende spørgsmål: Hvad er vigtigt for, at Jeres virksomhed kan skabe værdi? ....<a href="processer.html">Læs mere</a>
-                    </p>
+                    <p>SKAB VÆRDI GENNEM PROCESSER FLOWINT styrker PROCESSER Kan du sætte hak ved et eller flere af disse punkter, når du stiller dig selv følgende spørgsmål: Hvad er vigtigt for, at Jeres virksomhed kan skabe værdi? ....<a href="processer.html">Læs mere</a></p>
                 </div>
-                <!--   <p>
-                content of processer <a href="#" class="readMe">［Read me］</a>
-               </p> -->
             </div>
             <div class="col-sm-6 contentOptimize Samarbejder">
                 <div class="contentImage">
@@ -422,9 +417,7 @@
                     <a class="linkOptimizer" href="Samarbejder.html">Samarbejder</a>
                 </h4>
                 <div class="line">
-                    <p>
-                        content of samarbejder
-                    </p>
+                    <p>SKAB VÆRDI GENNEM SAMARBEJDE<br/> Kan du sætte hak ved et eller flere af disse punkter, når du stiller dig selv følgende spørgsmål: Hvad er vigtigt for, at Jeres virksomhed kan skabe værdi?....<a href="Samarbejder.html">Læs mere</a></p>
                 </div>
             </div>
             <div class="col-sm-6 contentOptimize Agility">
@@ -435,13 +428,9 @@
                     <a class="linkOptimizer" href="Agility.html">Agility</a>
                 </h4>
                 <div class="line">
-                    <p>
-                        content of agility
-                    </p>
-                </div>
-                <!--                 <p>
-                    content of Agility <a href="#" class="readMe">［Read me］</a>
-                </p> -->
+                    <p>SKAB VÆRDI GENNEM AGILITET FLOWINT styrker AGILITET<br/>
+                    Kan du sætte hak ved et eller flere af disse punkter, når du stiller dig selv følgende spørgsmål:
+                    Hvad er vigtigt for, at Jeres virksomhed kan skabe værdi?...<a href="Samarbejder.html">Læs mere</a></p></div>
             </div>
             <div class="col-sm-6 contentOptimize Co-opreation">
                 <div class="contentImage">
@@ -451,13 +440,11 @@
                     <a class="linkOptimizer" href="RELATIONER.html">Relationer</a>
                 </h4>
                 <div class="line">
-                    <p>
-                        content of Relationer
-                    </p>
+                    <p>SKAB VÆRDI GENNEM RELATIONER<br/>
+                    FLOWINT styrker RELATIONER
+                    Kan du sætte hak ved et eller flere af disse punkter, når du stiller dig selv følgende spørgsmål:
+                    Hvad er vigtigt for, at Jeres virksomhed kan skabe værdi?...<a href="Samarbejder.html">Læs mere</a></p>
                 </div>
-                <!-- <p>
-                    content of Co-operation <a href="#" class="readMe">［Read me］</a>
-                </p> -->
             </div>
         </div>
         <div class="arrow arrow2">
